# DeviceTwinSample

./: Readme.md
device/: Readme.md
device/c/: Readme.md
device/c/iothub_client_sample_mqtt_egtwin/: CMakeLists.txt  iothub_client_sample_mqtt_egtwin.c
device/c/iothub_client_sample_mqtt_egtwin/mbed/: CMakeLists.txt
device/c/iothub_client_sample_mqtt_egtwin/windows/: packages.config
device/csharp/: Readme.md
device/csharp/DeviceWithTwin/: App.xaml  App.xaml.cs  DeviceWithTwin.csproj  MainWindow.xaml  MainWindow.xaml.cs  TrackingCar.xaml  TrackingCar.xaml.cs  packages.config
device/csharp/DeviceWithTwin/Models/: DesiredProperties.cs  ReportedProperties.cs  ThingsCar.cs
device/csharp/DeviceWithTwin/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
device/iothub_client_sample_mqtt_egtwin/: CMakeLists.txt  iothub_client_sample_mqtt_egtwin.c
device/iothub_client_sample_mqtt_egtwin/linux/: CMakeLists.txt
device/iothub_client_sample_mqtt_egtwin/windows/: iothub_client_sample_mqtt_egtwin.sln  iothub_client_sample_mqtt_egtwin.vcxproj
service/: Readme.md
service/Models/: DesiredPropertiesToJso.cs.txt  IoTHubContext.cs  SetDesiredProperties.cs.txt
